fix: AttachTool 使用反射兼容 JDK 8/17，无需编译时依赖