@@ -2,11 +2,8 @@ package com.github.funnyx6.jvmdoctor.agent;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.management.ManagementFactory;
-import java.net.URL;
-import java.net.URLClassLoader;
+import java.lang.reflect.Method;
 import java.util.List;
-import java.util.jar.JarFile;
 
 /**
  * 动态挂载工具
@@ -15,10 +12,13 @@ import java.util.jar.JarFile;
  * java -jar jvm-doctor-agent.jar --pid 12345
  * java -jar jvm-doctor-agent.jar --list
  * java -jar jvm-doctor-agent.jar --help
+ * 
+ * 注意：JDK 8 需要 tools.jar 在 classpath 中
  */
 public class AttachTool {
     
-    private static final String AGENT_CLASS = "com.github.funnyx6.jvmdoctor.agent.JvmDoctorAgent";
+    private static final String VIRTUAL_MACHINE_CLASS = "com.sun.tools.attach.VirtualMachine";
+    private static final String VIRTUAL_MACHINE_DESCRIPTOR_CLASS = "com.sun.tools.attach.VirtualMachineDescriptor";
     
     public static void main(String[] args) {
         String pid = null;
@@ -94,29 +94,31 @@ public class AttachTool {
         System.out.println("---------------");
         
         try {
-            // 使用不同的方法列出进程
-            List<ProcessHandle> processes = ProcessHandle.allProcesses()
-                .filter(p -> p.info().command().isPresent())
-                .filter(p -> {
-                    String cmd = p.info().command().orElse("");
-                    return cmd.contains("java") || cmd.contains("javaw");
-                })
-                .toList();
+            // 加载 VirtualMachine.list() 方法
+            Class<?> vmClass = Class.forName(VIRTUAL_MACHINE_CLASS);
+            Method listMethod = vmClass.getMethod("list");
+            @SuppressWarnings("unchecked")
+            List<Object> vms = (List<Object>) listMethod.invoke(null);
             
-            for (ProcessHandle p : processes) {
-                String pid = String.valueOf(p.pid());
-                String cmd = p.info().command().map(c -> {
-                    int idx = c.lastIndexOf(File.separator);
-                    return idx >= 0 ? c.substring(idx + 1) : c;
-                }).orElse("");
-                System.out.printf("  %-8s %s%n", pid, cmd);
-            }
-            
-            if (processes.isEmpty()) {
+            if (vms == null || vms.isEmpty()) {
                 System.out.println("  (no Java processes found)");
+                return;
             }
+            
+            for (Object vm : vms) {
+                String id = (String) vm.getClass().getMethod("id").invoke(vm);
+                String displayName = (String) vm.getClass().getMethod("displayName").invoke(vm);
+                if (displayName == null || displayName.isEmpty()) {
+                    displayName = "(no name)";
+                }
+                System.out.printf("  %-8s %s%n", id, displayName);
+            }
+            
+        } catch (ClassNotFoundException e) {
+            System.err.println("Attach API not available. Make sure tools.jar is in classpath.");
+            System.exit(1);
         } catch (Exception e) {
-            System.err.println("Error listing processes: " + e.getMessage());
+            System.err.println("Error listing JVMs: " + e.getMessage());
         }
     }
     
@@ -138,155 +140,71 @@ public class AttachTool {
     private static void attachAgent(String pid, String serverUrl, int interval) {
         System.out.println("Attaching to PID: " + pid);
         
+        Object vm = null;
         try {
-            // 获取 Agent JAR 路径
-            String agentJar = getAgentJarPath();
-            System.out.println("Agent JAR: " + agentJar);
+            // 加载 VirtualMachine 类
+            Class<?> vmClass = Class.forName(VIRTUAL_MACHINE_CLASS);
+            Class<?> vmDescriptorClass = Class.forName(VIRTUAL_MACHINE_DESCRIPTOR_CLASS);
             
-            // 使用不同的 attach 方式
-            boolean attached = false;
+            // 获取 attach 方法
+            Method attachMethod = vmClass.getMethod("attach", vmDescriptorClass);
             
-            // 方式1: JDK 9+ 使用 ProcessHandle
-            try {
-                attached = attachUsingProcessHandle(pid, agentJar, serverUrl, interval);
-            } catch (Exception e) {
-                System.out.println("ProcessHandle attach failed, trying VirtualMachine...");
-            }
-            
-            // 方式2: JDK 8 风格的 VirtualMachine
-            if (!attached) {
-                attached = attachUsingVirtualMachine(pid, agentJar, serverUrl, interval);
-            }
-            
-            if (attached) {
-                System.out.println("Agent attached successfully!");
-                System.out.println("Server URL: " + (serverUrl != null ? serverUrl : "http://localhost:8080"));
-                System.out.println("Report interval: " + interval + "s");
-            } else {
-                System.err.println("Failed to attach agent. Make sure the target JVM has:");
-                System.err.println("  -Djdk.attach.allowAttachSelf=true");
-                System.exit(1);
-            }
-            
-        } catch (Exception e) {
-            System.err.println("Failed to attach: " + e.getMessage());
-            e.printStackTrace();
-            System.exit(1);
-        }
-    }
-    
-    /**
-     * 使用 JDK 9+ ProcessHandle API attach
-     */
-    private static boolean attachUsingProcessHandle(String pid, String agentJar, String serverUrl, int interval) {
-        try {
-            long pidLong = Long.parseLong(pid);
-            ProcessHandle process = ProcessHandle.of(pidLong).orElse(null);
-            
-            if (process == null) {
-                return false;
-            }
-            
-            // 检查权限
-            checkAttachPermission();
-            
-            // 动态加载 Agent
-            String agentArgs = buildAgentArgs(serverUrl, interval);
-            
-            // 使用 Instrumentation API 加载 agent (需要 JDK 9+)
-            process.info().command().ifPresent(cmd -> {
-                System.out.println("Target JVM command: " + cmd);
-            });
-            
-            // 尝试通过 JMX attach
-            return attachViaJMX(pidLong, agentJar, agentArgs);
-            
-        } catch (Exception e) {
-            System.err.println("ProcessHandle attach error: " + e.getMessage());
-            return false;
-        }
-    }
-    
-    /**
-     * 使用 JMX Remote 方式 attach (JDK 9+)
-     */
-    private static boolean attachViaJMX(long pid, String agentJar, String agentArgs) {
-        try {
-            // JDK 9+ 可以通过 AttachProvider API
-            // 这里使用简化方式：假设进程支持 JMX
-            System.out.println("Attempting JMX-based agent loading...");
-            
-            // 直接返回 true，因为 attach 本身已经触发 agent 加载
-            // 实际加载由 JVM 的 -javaagent 参数或动态 attach 完成
-            return true;
-            
-        } catch (Exception e) {
-            return false;
-        }
-    }
-    
-    /**
-     * 传统 VirtualMachine attach (JDK 8)
-     */
-    private static boolean attachUsingVirtualMachine(String pid, String agentJar, String serverUrl, int interval) {
-        try {
-            // 尝试加载 tools.jar 中的 VirtualMachine
-            Class<?> vmClass = Class.forName("com.sun.tools.attach.VirtualMachine");
-            Class<?> vmDescriptorClass = Class.forName("com.sun.tools.attach.VirtualMachineDescriptor");
-            
-            // 获取 list 方法
-            java.lang.reflect.Method listMethod = vmClass.getMethod("list");
+            // 获取目标 VM
+            Method listMethod = vmClass.getMethod("list");
             @SuppressWarnings("unchecked")
-            List<?> vms = (List<?>) listMethod.invoke(null);
+            List<Object> vms = (List<Object>) listMethod.invoke(null);
             
-            // 查找目标 VM
             Object targetVm = null;
-            for (Object vm : vms) {
-                String vmId = (String) vm.getClass().getMethod("id").invoke(vm);
-                if (vmId.equals(pid)) {
-                    targetVm = vm;
+            for (Object candidate : vms) {
+                String id = (String) candidate.getClass().getMethod("id").invoke(candidate);
+                if (id.equals(pid)) {
+                    targetVm = candidate;
                     break;
                 }
             }
             
             if (targetVm == null) {
                 System.err.println("VirtualMachine not found for PID: " + pid);
-                return false;
+                System.exit(1);
             }
             
-            // 获取 attach 方法
-            java.lang.reflect.Method attachMethod = vmClass.getMethod("attach", vmDescriptorClass);
-            Object vm = attachMethod.invoke(null, targetVm);
+            // 获取 Agent JAR 路径
+            String agentJar = getAgentJarPath();
+            System.out.println("Agent JAR: " + agentJar);
             
-            // 构建 agent 参数
+            // 执行 attach
+            vm = attachMethod.invoke(null, targetVm);
+            
+            // 构建 Agent 参数
             String agentArgs = buildAgentArgs(serverUrl, interval);
             
             // 加载 agent
-            java.lang.reflect.Method loadAgentMethod = vm.getClass().getMethod("loadAgent", String.class, String.class);
+            Method loadAgentMethod = vm.getClass().getMethod("loadAgent", String.class, String.class);
             loadAgentMethod.invoke(vm, agentJar, agentArgs);
             
-            // detach
-            java.lang.reflect.Method detachMethod = vm.getClass().getMethod("detach");
-            detachMethod.invoke(vm);
-            
-            return true;
+            System.out.println("Agent attached successfully!");
+            System.out.println("Server URL: " + (serverUrl != null ? serverUrl : "http://localhost:8080"));
+            System.out.println("Report interval: " + interval + "s");
             
         } catch (ClassNotFoundException e) {
-            // tools.jar 不可用
-            System.out.println("VirtualMachine API not available (JDK 9+ without tools.jar)");
-            return false;
+            System.err.println("Attach API not available. Make sure tools.jar is in classpath.");
+            System.err.println("");
+            System.err.println("For JDK 8, ensure JAVA_HOME points to JDK 8.");
+            System.exit(1);
         } catch (Exception e) {
-            System.err.println("VirtualMachine attach error: " + e.getMessage());
-            return false;
+            System.err.println("Failed to attach: " + e.getMessage());
+            e.printStackTrace();
+            System.exit(1);
+        } finally {
+            if (vm != null) {
+                try {
+                    Method detachMethod = vm.getClass().getMethod("detach");
+                    detachMethod.invoke(vm);
+                } catch (Exception e) {
+                    // 忽略
+                }
+            }
         }
-    }
-    
-    /**
-     * 检查 attach 权限
-     */
-    private static void checkAttachPermission() {
-        // JDK 9+ 不再需要显式的 SecurityManager 检查
-        // attach 权限由操作系统和 JVM 配置控制
     }
     
     /**
@@ -308,11 +226,9 @@ public class AttachTool {
      * 获取 Agent JAR 路径
      */
     private static String getAgentJarPath() throws IOException {
-        // 获取当前 JAR 的路径
         String path = AttachTool.class.getProtectionDomain().getCodeSource().getLocation().getPath();
         path = java.net.URLDecoder.decode(path, "UTF-8");
         
-        // 如果是目录，查找 JAR 文件
         if (path.endsWith("/") || path.endsWith("\\")) {
             File dir = new File(path);
             File[] jars = dir.listFiles((d, name) -> 
@@ -343,10 +259,12 @@ public class AttachTool {
         System.out.println("  --list, -l           List all Java processes");
         System.out.println("  --help, -h           Show this help");
         System.out.println("");
+        System.out.println("Requirements:");
+        System.out.println("  JDK 8 with tools.jar in classpath");
+        System.out.println("");
         System.out.println("Examples:");
         System.out.println("  java -jar jvm-doctor-agent.jar --list");
         System.out.println("  java -jar jvm-doctor-agent.jar --pid 12345");
-        System.out.println("  java -jar jvm-doctor-agent.jar -p 12345 -u http://localhost:8080 -i 10");
-        System.out.println("  java -jar jvm-doctor-agent.jar 12345");
+        System.out.println("  java -cp tools.jar:jvm-doctor-agent-attach.jar AttachTool --pid 12345");
     }
 }
